fixed the misalignment of category buttons

--- a/app/client/frontend/src/article/viewArticles/CategoryFilter.css
+++ b/app/client/frontend/src/article/viewArticles/CategoryFilter.css
@@ -8,8 +8,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    border-bottom: 1px black solid; 
     padding: 10px;
+    margin: auto;
 }
 
 
