--- a/app/client/frontend/src/article/viewArticles/ShowArticles.css
+++ b/app/client/frontend/src/article/viewArticles/ShowArticles.css
@@ -8,6 +8,9 @@
 }
 
 .offerBox{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     width: 40%;
     margin-bottom: 30px;
     border: 1px solid rgb(228, 228, 228);
@@ -77,5 +80,20 @@
     margin-top: 80px;
     margin-bottom: 40px;
     background-color: white;
+}
+
+
+.articleText{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 50px;
+    margin-bottom: 20px;
+    padding-left: 5px;
+}
+
+.articleButtons{
+    display: flex;
+    justify-content: center;
 }
 
